ログアウト機能の実装

--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -5,4 +5,5 @@
 {% block content %}
 
 <p style="text-align: center;">Welcome , {{ user.get_username }} !!</p>
+<li><a href="{% url 'accounts:logout' %}">ログアウト</a></li>
 {% endblock %}
