--- a/templates/tweets/home.html
+++ b/templates/tweets/home.html
@@ -2,6 +2,8 @@
 
 {% block title %}Home{% endblock %} ← titleを入れる
 
+
 {% block content %}
 <h1>Homeです</h1>
+{% include '../accounts/user_profile.html' %}
 {% endblock %}
