--- a/templates/tweets/home.html
+++ b/templates/tweets/home.html
@@ -15,6 +15,7 @@
             </li>
         {% endfor %}
     </ul>
-<li><a href="{% url 'accounts:user_profile' user.get_username %}">Sign up</a></li>
+    <li><a href="{% url 'tweets:create' %}">Create</a></li>
+{% comment %} <li><a href="{% url 'accounts:user_profile' user.get_username %}">Sign up</a></li> {% endcomment %}
 {% comment %} {% include '../accounts/user_profile.html' %} {% endcomment %}
 {% endblock %}
