--- a/templates/tweets/delete.html
+++ b/templates/tweets/delete.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Tweet datail{% endblock %}
+{% block title %}Tweet deleted!{% endblock %}
 
 {% block content %}
-<h1>detail</h1>
+<h1>削除内容の確認</h1>
 <h1>Tweet</h1>
     <ul>
             <li>
@@ -11,7 +11,11 @@
             <p>Created by: {{ tweet.creator.username }}</p>
             <p>Created at: {{ tweet.created }}</p>
             </li>
-            <li><a href="{% url 'tweets:delete' tweet.id %}">Delete</a></li>
+            <form method="post">
+            {% csrf_token %}
+                <p>削除します。よろしいですか？</p>
+                <input class="btn btn-danger" type="submit" value="削除する">
+            </form>
     </ul>
     <a href="{% url 'tweets:home' %}">Home</a>
 {% endblock %}
